<resources>
    <string name="app_name">Media Player</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="wait">Please wait...</string>
    <string name="empty">Fields must not be empty</string>
    <string name="epEmpty">Email or Password must not be empty</string>
    <string name="passwordmatch">Password doesn`t match</string>
    <string name="title_activity_folder">FolderActivity</string>
    <string name="folder_success">Folder Name added successfully</string>
    <string name="forgot_email">Forgot password link has been sent to email address</string>
    <string name="verify_email">Please verify the email link</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="noimage">No Images Found</string>


    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
