<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorPrimary">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="openImageImplementation"
                android:src="@drawable/user" />


            <!--<EditText-->
                <!--android:id="@+id/name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/profileImageView"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Name"-->
                <!--android:inputType="text"-->
                <!--android:paddingLeft="5dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/phone"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/name"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Mobile"-->
                <!--android:inputType="phone"-->
                <!--android:maxLength="10"-->
                <!--android:paddingLeft="5dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/phone"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="email Address"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:paddingLeft="5dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/email"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Password"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLength="10"-->
                <!--android:paddingLeft="5dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/cPassword"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/password"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Confirm Password"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLength="10"-->
                <!--android:paddingLeft="5dp" />-->

            <!--<Button-->
                <!--android:layout_width="@dimen/width"-->
                <!--android:layout_height="@dimen/height"-->
                <!--android:layout_below="@+id/cPassword"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:background="@drawable/button_background"-->
                <!--android:onClick="signUpImplementation"-->
                <!--android:text="@string/signup" />-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_below="@+id/profileImageView"
                android:padding="20dp" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/cPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/confirm_password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/signUp"
                    android:onClick="signUpImplementation"
                    android:textColor="@color/background_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/already_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:onClick="loginImplementation"
                    android:text="@string/already_user"
                    android:textColor="@color/white_greyish"
                    android:textSize="15sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>